--- a/iot_server/platformio.ini
+++ b/iot_server/platformio.ini
@@ -1,22 +1,34 @@
+[platformio]
+src_dir = src
+
 [env:esp32dev]
-platform = espressif32
-board = esp32dev
-framework = arduino
-
+platform      = espressif32
+framework     = arduino
+board         = esp32dev
 monitor_speed = 115200
-upload_speed  = 921600        ; optional faster upload
-upload_port   = COM6          ; <— set to what Device Manager shows
-monitor_port  = COM6          ; <— same here
-
 board_build.filesystem = littlefs
+upload_port   = COM6
+upload_speed = 115200
+
+; Compile everything in src/ PLUS all .cpp under components/**
+build_src_filter =
+  +<*>
+  +<../components/**>
+
+; Headers search paths for your modules
+build_flags =
+  -I components
+  -I components/domain
+  -I components/infra
+  -I components/services
+  -I components/api_http
+
+lib_ldf_mode    = deep+
+lib_compat_mode = strict
 
 lib_deps =
-  ottowinter/ESPAsyncWebServer-esphome @ ^3.2.2
+  ESP32Async/AsyncTCP @ ^3.4.7
+  ESP32Async/ESPAsyncWebServer @ ^3.8.0
   bblanchon/ArduinoJson @ ^7
   sandeepmistry/LoRa @ ^0.8.0
-  adafruit/RTClib @ ^2.1.3
-
-build_flags =
-  -DASYNCWEBSERVER_REGEX
-
-monitor_filters = time, log2
+  adafruit/RTClib @ ^2.1.4
